tests/parser-test-files/bad-files/parse-while-let.2.error
error: Malformed while-let expression
  --> test:4:29
   |
 4 |  (define f (while-let (Some x)))
   |                               ^ expected =
